# Information-Security

./: .gitignore
Лаб. 1. Шифр Цезаря/: CMakeLists.txt  README.md
Лаб. 1. Шифр Цезаря/decoder/: CMakeLists.txt
Лаб. 1. Шифр Цезаря/decoder/src/: main.cpp
Лаб. 1. Шифр Цезаря/decoder/src/caesar/: decode.cpp  decode.h  russian.cpp  russian.h
Лаб. 1. Шифр Цезаря/encoder/: CMakeLists.txt
Лаб. 1. Шифр Цезаря/encoder/src/: main.cpp
Лаб. 1. Шифр Цезаря/encoder/src/caesar/: encode.cpp  encode.h  russian.cpp  russian.h
Лаб. 1. Шифр Цезаря/resources/: file.txt
Лаб. 2. Протокол Диффи — Хеллмана/: CMakeLists.txt  README.md
Лаб. 2. Протокол Диффи — Хеллмана/src/: alice_and_bob.cpp  alice_and_bob.h  caesar.cpp  caesar.h  main.cpp  pg.h  sock.cpp  sock.h
Лаб. 3. SRP-6/: CMakeLists.txt  README.md
Лаб. 3. SRP-6/src/: greeting.cpp  greeting.h  main.cpp  ng.h  sock.cpp  srp_6.cpp  srp_6.h
Лаб. 3. SRP-6/src/sock/: socket.h
Лаб. 3. SRP-6/src/srp_6/: client.cpp  client.h  communicant.cpp  communicant.h  ng.cpp  server.cpp  server.h
Лаб. 3. SRP-6/utils/: ng_generator.py
Лаб. 4. RSA/: CMakeLists.txt  README.md
Лаб. 4. RSA/src/: big_integer.h  main.cpp
Лаб. 4. RSA/src/primes/: prime_utils.cpp  prime_utils.h
Лаб. 4. RSA/src/rsa/: alice.cpp  alice.h  bob.cpp  bob.h  communicant.cpp  communicant.h  key.cpp  key.h
Лаб. 4. RSA/src/sock/: socket.cpp
Пр. 1. Хэш-функция/: README.md  pom.xml
Пр. 1. Хэш-функция/src/main/java/ru/arjentix/hash_func/: Hasher.java  IHasher.java
Пр. 1. Хэш-функция/src/main/java/ru/arjentix/hash_func/zkg_ar/: Hasher.java
Пр. 1. Хэш-функция/src/test/java/ru/arjentix/hash_func/: Tests.java
